tests/ui/errors/snapshots/infer_reference_aliases_sibling.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Reference may mutate a value read in the same expression
    ╭─[main.lis:9:21]
  8 │   let mut total = 1
  9 │   let pair = (store(&total, 5), total)
    ·                     ───┬──      ──┬──
    ·                        │          ╰── may see the mutated value
    ·                        ╰── may mutate `total`
 10 │   let _ = pair
    ╰────
  help: Make evaluation order explicit by choosing which value the read should see:
        - for the value before `&total` runs, copy it first with `let before = total` and read `before`
        - for the value after, bind the reference-taking operand to a variable first, then read `total`
  code: [infer.reference_aliases_sibling]
