tests/ui/errors/snapshots/infer_reference_to_scalar_const.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot take address of `const`
    ╭─[test.lis:9:8]
  8 │ fn main() {
  9 │   bump(&N)
    ·        ─┬
    ·         ╰── not addressable
 10 │ }
    ╰────
  help: `const` bindings are not addressable. Copy the value into a local `let` first if you need a reference · code: [infer.non_addressable_const]
