tests/ui/errors/snapshots/infer_refutable_slice_pattern_in_let.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Pattern might not match
   ╭─[test.lis:3:7]
 2 │ fn test(slice: Slice<int>) {
 3 │   let [a, b] = slice;
   ·       ───┬──
   ·          ╰── only matches 2 elements
 4 │ }
   ╰────
  help: Handle slices of any length with `match slice { [a, b] => ..., _ => ... }` · code: [infer.refutable_pattern]
