tests/ui/errors/snapshots/infer_reserved_import_alias_main.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Reserved import alias
   ╭─[test.lis:2:8]
 1 │ 
 2 │ import main "go:fmt"
   ·        ──┬─
   ·          ╰── reserved name
 3 │ 
   ╰────
  help: `main` is a reserved name and cannot be used as an import alias. Choose a different alias, e.g. `import my_main "..."` · code: [resolve.reserved_import_alias]
