tests/ui/errors/snapshots/infer_reserved_import_alias_predeclared.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Reserved import alias
   ╭─[test.lis:2:8]
 1 │ 
 2 │ import nil "go:fmt"
   ·        ─┬─
   ·         ╰── reserved name
 3 │ 
   ╰────
  help: `nil` is a reserved name and cannot be used as an import alias. Choose a different alias, e.g. `import my_nil "..."` · code: [resolve.reserved_import_alias]
